@@ -334,6 +334,7 @@ static int spRcvMsg(int *s, int *from, void **data, unsigned long *length, MqgSt
 
    switch (spMsg.xtra) {
    case MSG_X_PROVIDER:
+   case MSG_X_SFCB_PROVIDER:
       *length = spMsg.segments;
       *data = spMsg.provId;
    case MSG_X_INVALID_NAMESPACE:
